# spectral

./: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json  server.js
benchmarks/: README.md  colorimetry-bench.cpp  results-O2.txt
public/: app.js  index.html  spectral.js
public/wasm/: SHA256SUMS  spectral.mjs  spectral.wasm
scripts/: build-wasm.sh  deploy.sh
spectral-wasm/: CMakeLists.txt  wrapper.cpp
